--- a/frontend/src/assets/css/start.css
+++ b/frontend/src/assets/css/start.css
@@ -55,42 +55,6 @@ html,body,#app,#app section,#app section .main{
     margin-top: -6px;
 }
 
-.systemTool{
-    position: fixed;
-    right: 0;
-    top: 0;
-    margin-top: -6px;
-    margin-right: 0px;
-    -webkit-app-region: no-drag;
-}
-
-
-.systemTool .mylink{
-    color: #f3f3f3;
-    margin: 0 5px;
-    text-decoration: none;
-    font-size: 14px;
-}
-.systemTool .el-button{
-    padding:0 !important;
-    border:0 !important;
-    border-radius:0 !important;
-    color: #f3f3f3 !important;
-}
-.systemTool .el-button:hover{
-    background-color: #D71526;
-}
-.systemTool .button{
-    width: 30px;
-    height: 30px;
-    background-color: #00000000;
-    font-size: large;
-}
-
-.systemTool .el-button+.el-button{
-    margin-left: 0 !important;
-}
-
 .el-dropdown-link {
     cursor: pointer;
     color: #fff;
@@ -120,7 +84,6 @@ html,body,#app,#app section,#app section .main{
     color: #0094ea;
     font-size: 16px;
     border-radius: 0px;
-    padding: 10px 0px;
     user-select: none;
     /* background-color: #F0F9EB; */
     text-align: left;
@@ -128,7 +91,7 @@ html,body,#app,#app section,#app section .main{
     width: 100%;
     white-space: nowrap;
     position: relative;
-    padding-left: 38px;
+    padding: 10px 0px 10px 38px;
 }
 
 .main .speed::before
@@ -155,7 +118,7 @@ html,body,#app,#app section,#app section .main{
     width: 100%;
 }
 
-/*
+
 .main .el-tabs,.main .el-tabs .el-tabs__content,.main .el-tabs .el-tabs__content .el-tab-pane,.main .el-tabs .el-tabs__content .el-tab-pane ul{
     height: 100%;
 }
@@ -163,7 +126,7 @@ html,body,#app,#app section,#app section .main{
 .main .el-tabs .el-tabs__content{
     overflow: auto;
 }
-*/
+
 
 .el-tabs--border-card.el-tabs--left{
     border-width: 0px !important;
@@ -399,4 +362,19 @@ html,body,#app,#app section,#app section .main{
 }
 .heisir .main .videoItem .el-button{
     width: 100%;
+}
+
+.el-button+.el-button{
+    margin-left: 0 !important;
+}
+
+.el-button{
+    padding:0 !important;
+    border:0 !important;
+    border-radius:0 !important;
+    color: #f3f3f3 !important;
+}
+
+.el-button:hover{
+    background-color: #D71526;
 }
